[gd_scene load_steps=12 format=3 uid="uid://b1kqlqe1hger3"]

[ext_resource type="Script" uid="uid://dvwc1smtvn27o" path="res://scripts/enemies.gd" id="1_q4yn1"]
[ext_resource type="Texture2D" uid="uid://wyj0v68onqkk" path="res://assets/textures/enemies/bat_flying.png" id="2_ad2ka"]

[sub_resource type="CircleShape2D" id="CircleShape2D_q4yn1"]
radius = 8.0

[sub_resource type="AtlasTexture" id="AtlasTexture_q4yn1"]
atlas = ExtResource("2_ad2ka")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ad2ka"]
atlas = ExtResource("2_ad2ka")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_i5e8t"]
atlas = ExtResource("2_ad2ka")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_010eu"]
atlas = ExtResource("2_ad2ka")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pfngh"]
atlas = ExtResource("2_ad2ka")
region = Rect2(64, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_c801f"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q4yn1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ad2ka")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i5e8t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_010eu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pfngh")
}],
"loop": true,
"name": &"bat_flying",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_wbw6b"]
radius = 147.003

[sub_resource type="CircleShape2D" id="CircleShape2D_ad2ka"]
radius = 16.0312

[node name="Enemy" type="CharacterBody2D"]
editor_description = "Enemy"
z_index = 1
script = ExtResource("1_q4yn1")

[node name="TimeToWander" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="ResetModulateRedHit" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="TimeToAttackAgain" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_q4yn1")
debug_color = Color(0, 0.472581, 0.7, 0.42)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_c801f")
animation = &"bat_flying"
frame_progress = 0.824404

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_wbw6b")
debug_color = Color(0.7, 0.529003, 0, 0.247059)

[node name="EnemyHitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyHitbox"]
shape = SubResource("CircleShape2D_ad2ka")
debug_color = Color(0.7, 0.0441309, 0, 0.42)

[node name="DebugInfoLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -108.0
offset_top = -41.0
offset_right = 760.0
offset_bottom = 70.0
grow_horizontal = 2
scale = Vector2(0.25, 0.25)
theme_override_font_sizes/font_size = 16
text = "Health: ?
Speed: ?
Velocity: ?
PlayerChasing: ?
AttackCooldown: ?
"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="timeout" from="TimeToWander" to="." method="_on_time_to_wander_timeout"]
[connection signal="timeout" from="ResetModulateRedHit" to="." method="_on_reset_modulate_red_hit_timeout"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="input_event" from="EnemyHitbox" to="." method="_on_enemy_hitbox_input_event"]
